# xray_api-rs

./: Cargo.toml  LICENSE  build.rs
.github/workflows/: rust.yml
examples/: cli.rs
src/: client.rs  error.rs  lib.rs  types.rs
src/services/: logger.rs  mod.rs  observatory.rs  proxyman.rs  routing.rs  stats.rs
