[package]
name = "xray_api"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
tonic = "0.14.5"
tonic-prost = "0.14.5"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-prost-build = "*"
